--- a/index.html
+++ b/index.html
@@ -125,28 +125,21 @@
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">7:00 - 7:15 PM</span>
-                                        <div class="event-details">
-                                            <h4>Sponsor Presentation</h4>
-                                            <p>Special session with our event sponsors</p>
-                                        </div>
-                                    </div>
-                                    <div class="schedule-item">
-                                        <span class="time">7:15 - 8:15 PM</span>
+                                        <span class="time">7:00 - 8:00 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Computing Applications</h4>
                                             <p>Prof. Gunzer - Real-world applications of quantum computing</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">8:15 - 8:45 PM</span>
+                                        <span class="time">8:00 - 8:30 PM</span>
                                         <div class="event-details">
                                             <h4>Interactive Quantum Activities</h4>
                                             <p>Spin the Quantum, Kahoot, and Superposition reflex games</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">8:45 - 9:00 PM</span>
+                                        <span class="time">8:30 - 8:45 PM</span>
                                         <div class="event-details">
                                             <h4>Hackathon Announcement & Tool Demo</h4>
                                             <p>Introduction to hackathon and educational tools demonstration</p>
@@ -288,6 +281,13 @@
                                     </div>
                                     <div class="schedule-item">
                                         <span class="time">6:30 - 7:30 PM</span>
+                                        <div class="event-details">
+                                            <h4>IBM Speaker Session</h4>
+                                            <p>In-person IBM speaker presentation and judging evaluation</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">7:30 - 8:00 PM</span>
                                         <div class="event-details">
                                             <h4>Winners Announcement & Closing</h4>
                                             <p>Results announcement, certificates, and farewell ceremony</p>
