--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                         <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Computing 101</h4>
-                                            <p>Prof. Ahmed Younis - Introduction to quantum computing fundamentals</p>
+                                            <p>Introduction to quantum computing fundamentals</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
@@ -128,7 +128,7 @@
                                         <span class="time">7:00 - 8:00 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Computing Applications</h4>
-                                            <p>Prof. Gunzer - Real-world applications of quantum computing</p>
+                                            <p>Real-world applications of quantum computing</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
@@ -205,16 +205,16 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="schedule-day">
+                                <!-- <div class="schedule-day">
                                     <h3>Lab Tour - November 15th</h3>
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Hardware Lab Tour</h4>
-                                            <p>Prof. Haytham Omran - How quantum hardware works (photonics)</p>
+                                            <p>How quantum hardware works (photonics)</p>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
 
                             <!-- Slide 4: Talks -->
