added to be decided talks

--- a/index.html
+++ b/index.html
@@ -224,8 +224,9 @@
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Computing Industry Talks</h4>
-                                            <p>Industry experts share insights on quantum technology roadmap</p>
+                                            <h4>To Be Announced</h4>
+                                            <!-- <h4>Quantum Computing Industry Talks</h4>
+                                            <p>Industry experts share insights on quantum technology roadmap</p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -234,8 +235,9 @@
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Advanced Quantum Research</h4>
-                                            <p>Research presentations on cutting-edge quantum developments</p>
+                                            <h4>To Be Announced</h4>
+                                            <!-- <h4>Advanced Quantum Research</h4>
+                                            <p>Research presentations on cutting-edge quantum developments</p> -->
                                         </div>
                                     </div>
                                 </div>
@@ -244,8 +246,9 @@
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Applications & Career Paths</h4>
-                                            <p>Career opportunities and real-world quantum applications</p>
+                                            <h4>To Be Announced</h4>
+                                            <!-- <h4>Quantum Applications & Career Paths</h4>
+                                            <p>Career opportunities and real-world quantum applications</p> -->
                                         </div>
                                     </div>
                                 </div>
