Updated dates & information

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <!-- Slide 1: Opening & Session 1 -->
                             <div class="carousel-slide">
                                 <div class="schedule-day">
-                                    <h3>Opening - November 8th</h3>
+                                    <h3>Opening - November 10th</h3>
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
@@ -147,7 +147,7 @@
                                     </div>
                                 </div>
                                 <div class="schedule-day">
-                                    <h3>Session 1 - November 9th</h3>
+                                    <h3>Session 1 - November 11th</h3>
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 6:15 PM</span>
                                         <div class="event-details">
@@ -159,7 +159,7 @@
                                         <span class="time">6:15 - 7:00 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Superposition & Demo</h4>
-                                            <p>Anas Session - Website demo and practical quantum concepts</p>
+                                            <p>Session - Hackathon prompt and practical quantum concepts</p>
                                         </div>
                                     </div>
                                 </div>
@@ -168,7 +168,7 @@
                             <!-- Slide 2: Session 2 -->
                             <div class="carousel-slide">
                                 <div class="schedule-day">
-                                    <h3>Session 2 - November 11th</h3>
+                                    <h3>Session 2 - November 13th</h3>
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 6:45 PM</span>
                                         <div class="event-details">
@@ -189,7 +189,7 @@
                             <!-- Slide 3: Session 3 -->
                             <div class="carousel-slide">
                                 <div class="schedule-day">
-                                    <h3>Session 3 - November 13th</h3>
+                                    <h3>Session 3 - November 15th</h3>
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 6:45 PM</span>
                                         <div class="event-details">
@@ -265,13 +265,6 @@
                                             <p>Teams present their quantum computing projects and solutions</p>
                                         </div>
                                     </div>
-                                    <div class="schedule-item">
-                                        <span class="time">7:30 - 8:30 PM</span>
-                                        <div class="event-details">
-                                            <h4>IBM Speaker Session</h4>
-                                            <p>In-person IBM speaker presentation and judging evaluation</p>
-                                        </div>
-                                    </div>
                                 </div>
                                 <div class="schedule-day">
                                     <h3>Closing - November 20th</h3>
@@ -279,14 +272,7 @@
                                         <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
                                             <h4>IBM Quantum Ecosystem</h4>
-                                            <p>Virtual IBM speaker on quantum ecosystem and industry insights</p>
-                                        </div>
-                                    </div>
-                                    <div class="schedule-item">
-                                        <span class="time">6:30 - 7:30 PM</span>
-                                        <div class="event-details">
-                                            <h4>IBM Speaker Session</h4>
-                                            <p>In-person IBM speaker presentation and judging evaluation</p>
+                                            <p>IBM speaker on quantum ecosystem and industry insights</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
