--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Computing 101</h4>
-                                            <p>Introduction to quantum computing fundamentals</p>
+                                            <h4>Quantum Physics</h4>
+                                            <p>History & Introduction to quantum physics fundamentals</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
@@ -141,8 +141,8 @@
                                     <div class="schedule-item">
                                         <span class="time">8:30 - 8:45 PM</span>
                                         <div class="event-details">
-                                            <h4>Hackathon Announcement & Tool Demo</h4>
-                                            <p>Introduction to hackathon and educational tools demonstration</p>
+                                            <h4>Hackathon Announcement</h4>
+                                            <p>Introduction to hackathon prompt</p>
                                         </div>
                                     </div>
                                 </div>
