--- a/index.html
+++ b/index.html
@@ -111,35 +111,48 @@
                                 <div class="schedule-day">
                                     <h3>Opening - November 10th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:30 - 6:30 PM</span>
+                                        <span class="time">5:30 - 5:45 PM</span>
+                                        <div class="event-details">
+                                            <h4>Doors Open</h4>
+                                            <p>Arrival period for the opening. Don't be late!</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">5:45 - 6:00 PM</span>
+                                        <div class="event-details">
+                                            <h4>Event Start</h4>
+                                            <p>Event Introduction and Foreword</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">6:00 - 7:00 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Physics</h4>
                                             <p>History & Introduction to quantum physics fundamentals</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">6:30 - 7:00 PM</span>
+                                        <span class="time">7:00 - 7:30 PM</span>
                                         <div class="event-details">
-                                            <h4>Previous Winners Showcase</h4>
-                                            <p>Past competition winners present their quantum projects</p>
+                                            <h4>Break</h4>
+                                            <p>Fun activities and a chance to meet the previous winners</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">7:00 - 8:00 PM</span>
+                                        <span class="time">7:30 - 8:30 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Computing Applications</h4>
-                                            <p>Real-world applications of quantum computing</p>
-                                        </div>
-                                    </div>
-                                    <div class="schedule-item">
-                                        <span class="time">8:00 - 8:30 PM</span>
-                                        <div class="event-details">
-                                            <h4>Interactive Quantum Activities</h4>
-                                            <p>Spin the Quantum, Kahoot, and Superposition reflex games</p>
+                                            <h4>Quantum Computing 101</h4>
+                                            <p>Introduction to Quantum Computing by Dr. Ahmed Younes</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
                                         <span class="time">8:30 - 8:45 PM</span>
+                                        <div class="event-details">
+                                            <h4>Kahoot game</h4>
+\                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">8:45 - 9:00 PM</span>
                                         <div class="event-details">
                                             <h4>Hackathon Announcement</h4>
                                             <p>Introduction to hackathon prompt</p>
@@ -170,14 +183,14 @@
                                 <div class="schedule-day">
                                     <h3>Session 2 - November 13th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:30 - 6:45 PM</span>
+                                        <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Entanglement</h4>
                                             <p>Understanding quantum entanglement principles and applications</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">6:45 - 8:00 PM</span>
+                                        <span class="time">7:00 - 8:00 PM</span>
                                         <div class="event-details">
                                             <h4>Superdense Coding & Teleportation</h4>
                                             <p>Quantum communication protocols and quantum teleportation</p>
@@ -191,14 +204,14 @@
                                 <div class="schedule-day">
                                     <h3>Session 3 - November 15th</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:30 - 6:45 PM</span>
+                                        <span class="time">5:30 - 6:30 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Oracles</h4>
                                             <p>Understanding quantum oracles and their role in quantum algorithms</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
-                                        <span class="time">6:45 - 8:00 PM</span>
+                                        <span class="time">7:00 - 8:00 PM</span>
                                         <div class="event-details">
                                             <h4>Deutsch & Bernstein-Vazirani Algorithms</h4>
                                             <p>Implementation and analysis of fundamental quantum algorithms</p>
@@ -222,11 +235,10 @@
                                 <div class="schedule-day">
                                     <h3>Talks - November 16th (Sunday)</h3>
                                     <div class="schedule-item">
-                                        <span class="time">5:30 - 7:00 PM</span>
+                                        <span class="time">8:00 - 9:00 PM</span>
                                         <div class="event-details">
-                                            <h4>To Be Announced</h4>
-                                            <!-- <h4>Quantum Computing Industry Talks</h4>
-                                            <p>Industry experts share insights on quantum technology roadmap</p> -->
+                                            <h4>Quantum Chemistry and Quantum Simulation</h4>
+                                            <p>Join us in an online lecture as Dr. Taha Selim gives his insights about quantum chemisty and simulations</p>
                                         </div>
                                     </div>
                                 </div>
@@ -235,9 +247,8 @@
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 7:00 PM</span>
                                         <div class="event-details">
-                                            <h4>To Be Announced</h4>
-                                            <!-- <h4>Advanced Quantum Research</h4>
-                                            <p>Research presentations on cutting-edge quantum developments</p> -->
+                                            <h4>Quantum Algorithms</h4>
+                                            <p>Join us in an online lecture as Dr. Ahmed Younes explains different quantum algorithms and the nature of quantum advantage</p>
                                         </div>
                                     </div>
                                 </div>
