Updated Interactive game

--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
                                     <div class="schedule-item">
                                         <span class="time">8:30 - 8:45 PM</span>
                                         <div class="event-details">
-                                            <h4>Kahoot game</h4>
-\                                        </div>
+                                            <h4>Quiz game</h4>
+                                                <p>Test your understanding by joining us in an interactive quiz game</p>
+                                        </div>
                                     </div>
                                     <div class="schedule-item">
                                         <span class="time">8:45 - 9:00 PM</span>
