--- a/index.html
+++ b/index.html
@@ -182,6 +182,25 @@
                             <!-- Slide 2: Session 2 -->
                             <div class="carousel-slide">
                                 <div class="schedule-day">
+                                    <h3>Talks - November 12</h3>
+                                    <div class="schedule-item">
+                                        <span class="time">3:00 - 4:00 PM</span>
+                                        <div class="event-details">
+                                            <h4>Quantum Random Access Memory</h4>
+                                            <p>Join us online as Dr. Mohamed Zidan gives a talk about the various applications of quantum random access memories</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">4:00 - 5:00 PM</span>
+                                        <div class="event-details">
+                                            <h4>QRAM workshop</h4>
+                                            <p>An online workshop for students to apply their knowledge about QRAM. Courtesy of Dr. Mohamed Zidan and his team.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-slide">
+                                <div class="schedule-day">
                                     <h3>Session 2 - November 13th</h3>
                                     <div class="schedule-item">
                                         <span class="time">5:30 - 6:30 PM</span>
