changed some titles

--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
                                     <div class="schedule-item">
                                         <span class="time">3:00 - 4:00 PM</span>
                                         <div class="event-details">
-                                            <h4>Quantum Random Access Memory</h4>
+                                            <h4>Improving Quantum Machine Learning Using Quantum Main Memory (Q1RAM)</h4>
                                             <p>Join us online as Dr. Mohamed Zidan gives a talk about the various applications of quantum random access memories</p>
                                         </div>
                                     </div>
                                     <div class="schedule-item">
                                         <span class="time">4:00 - 5:00 PM</span>
                                         <div class="event-details">
-                                            <h4>QRAM workshop</h4>
+                                            <h4>Hands-on Integration of Q1RAM with Quantum Machine Learning.</h4>
                                             <p>An online workshop for students to apply their knowledge about QRAM. Courtesy of Dr. Mohamed Zidan and his team.</p>
                                         </div>
                                     </div>
