updated lecture timings

--- a/index.html
+++ b/index.html
@@ -253,20 +253,34 @@
                                 <div class="schedule-day">
                                     <h3>Talks - November 16th (Sunday)</h3>
                                     <div class="schedule-item">
-                                        <span class="time">8:00 - 9:00 PM</span>
+                                        <span class="time">7:00 - 8:00 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Chemistry and Quantum Simulation</h4>
                                             <p>Join us in an online lecture as Dr. Taha Selim gives his insights about quantum chemisty and simulations</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">8:00 - 9:00 PM</span>
+                                        <div class="event-details">
+                                            <h4>Workshop</h4>
+                                            <p>Hands-on workshop session</p>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="schedule-day">
                                     <h3>Talks - November 17th (Monday)</h3>
                                     <div class="schedule-item">
-                                        <span class="time">8:00 - 9:00 PM</span>
+                                        <span class="time">7:00 - 8:00 PM</span>
                                         <div class="event-details">
                                             <h4>Quantum Algorithms</h4>
                                             <p>Join us in an online lecture as Dr. Ahmed Younes explains different quantum algorithms and the nature of quantum advantage</p>
+                                        </div>
+                                    </div>
+                                    <div class="schedule-item">
+                                        <span class="time">8:00 - 9:00 PM</span>
+                                        <div class="event-details">
+                                            <h4>Workshop</h4>
+                                            <p>Hands-on workshop session</p>
                                         </div>
                                     </div>
                                 </div>
